
	* src/main.py:
	Applied fixes for dealing with reactors better.

	* src/avatar.py:
	* src/contact.py:
	* src/disco.py:
	* src/jabw.py:
	* src/main.py:
	* src/misciq.py:
	* src/register.py:
	* src/sasl.py:
	* src/session.py:
	* src/utils.py:
	* src/xmlconfig.py:
	Applied Florian's patch to use %r instead of %s.
	Fixes crashes during printing of unprintable chars.

2006-02-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/xdb/xmlfiles.py:
	Fixed reading of differently named variable.

	* src/imgmanip.py:
	Pulled image pieces out into this.

	* src/legacy/glue.py:
	* src/legacy/legacylist.py:
	* src/utils.py:
	Adjusted to account for move of image pieces.

	* src/legacy/glue.py:
	Updated version to 0.7.

2006-02-09  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/config.py:
	* config_example.xml:
	* src/legacy/icqt.py:
	Added ability to disable email notifications.

2006-02-08  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/xdb/xmlfiles.py:
	Fixed stupid bug where I wasn't assigning pre to anything.

	* src/legacy/legacylist.py:
	Made it so I can see the numeric hash.

2006-02-07  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	* src/avatar.py:
	* src/debug.py:
	* src/main.py:
	* src/xdb/xmlfiles.py:
	* src/xdb/legacyaimtransport.py:
	Retired doPath.

	* src/xdb/legacyjittransport.py:
	Added driver for old JIT format.

	* src/legacy/icqt.py:
	* config_example.xml:
	Added check for avatarsOnlyOnChat.

	* config_example.xml:
	* src/config.py:
	* src/legacy/icqt.py:
	* src/legacy/glue.py:
	* src/legacy/legacylist.py:
	* src/utils.py:
	* src/session.py:
	* src/jabw.py:
	* src/contact.py:
	* src/web/handler.py:
	* src/misciq.py:
	Added ability to disable avatars entirely.

	* INSTALL:
	Updated to reflect newer instructions.

	* src/config.py:
	* src/legacy/icqt.py:
	* config_example.xml:
	Added ability to disable web presence indicator.

	* src/langs/en.py:
	Removed useless lang string.

	* src/xmlconfig.py:
	Fix for lack of crashing with bad config option.